fixed bg bleeding

--- a/download.css
+++ b/download.css
@@ -86,6 +86,7 @@ body {
     font-size: 2rem;
     /* max-width: 90%; */
     padding: 7%;
+    padding-bottom: 0;
 
     backdrop-filter: blur(20px);
     background-color: rgba(0, 0, 0, 0.6);
@@ -100,6 +101,7 @@ body {
     padding: 5%;
     margin: 5%;
     margin-top: 0;
+    margin-bottom: 0;
     
     font-size: large;
     
@@ -198,8 +200,8 @@ footer ul li{
     padding-bottom: 5%;
 }
 
-/* @media only screen and (min-width: 767px){
-    .banner{
-        font-size: xx-large;
+@media only screen and (min-width: 767px){
+    body{
+        background-image: url("background.png");
     }
-} */
+}
